--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/mchlexe/helpon#readme",
   "dependencies": {
-    "dotenv": "10.0.0",
-    "express": "4.17.1",
-    "mongoose": "5.13.5",
-    "nodemon": "2.0.12"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.5",
+    "nodemon": "^2.0.12"
   }
 }
