--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.5",
+    "mongoose-sequence": "^5.3.1",
     "nodemon": "^2.0.12"
   }
 }
