--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.13.5",
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "yup": "^0.32.9"
   }
 }
